--- a/solving-problems-by-searching/pom.xml
+++ b/solving-problems-by-searching/pom.xml
@@ -4,10 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.aima.exercise</groupId>
     <artifactId>solving-problems-by-searching</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
+
+    <parent>
+        <groupId>com.aima.exercise</groupId>
+        <artifactId>exercise</artifactId>
+        <version>1.0.0</version>
+    </parent>
 
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
